--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="loading_data">Loading Data...</string>
     <string name="pleasewait">Please Wait...</string>
+    <string name="create_group">Create New Group</string>
 </resources>
