--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading_data">Loading Data...</string>
     <string name="pleasewait">Please Wait...</string>
+    <string name="create_group">Create New Group</string>
 </resources>
