--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="phonelabel">Phonenumber :</string>
     <string name="phone">Phonenumber</string>
     <string name="btn_signup">SIGN UP</string>
+    <string name="task_description">Description</string>
+    <string name="task_title">Title</string>
+    <string name="task_deadline">Done By</string>
 </resources>
