--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="task_complete">Completed</string>
     <string name="due_date">due date</string>
     <string name="task_name">Test Name</string>
+    <string name="switch_yes">Yes</string>
+    <string name="switch_no">No</string>
+    <string name="task_detail_complete">Complete</string>
 </resources>
