--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="switch_yes">Yes</string>
     <string name="switch_no">No</string>
     <string name="task_detail_complete">Complete</string>
+    <string name="title_activity_manifast_add">manifastAdd</string>
 </resources>
